--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 streamlit
 matplotlib
-opencv-python
+opencv-python-headless
 numpy
 pandas
-tensorflow  # if you're using Keras or deep learning
 pillow
