--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
-streamlit
-seaborn
-matplotlib
-opencv-python-headless
-numpy
-pandas
-pillow
-scikit-learn
-tensorflow
-tf-keras-vis
-tensorflow-cpu
+tensorflow==2.12.0
+keras==2.12.0
+numpy==1.23.5
+h5py==3.8.0
+opencv-python-headless==4.7.0.72
+Pillow==9.5.0
+matplotlib==3.7.1
+streamlit==1.25.0
