--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
+streamlit==1.25.0
+seaborn==0.12.2
+matplotlib==3.7.1
+opencv-python-headless==4.7.0.72
+numpy==1.23.5
+pandas==1.5.3
+pillow==9.5.0
+scikit-learn==1.2.2
 tensorflow==2.12.0
 keras==2.12.0
-numpy==1.23.5
+tf-keras-vis==0.8.0
 h5py==3.8.0
-opencv-python-headless==4.7.0.72
-Pillow==9.5.0
-matplotlib==3.7.1
-streamlit==1.25.0
