--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,6 @@ numpy==1.24.4
 pandas==1.5.3
 pillow==10.3.0
 scikit-learn==1.3.0
-tensorflow==2.14.1
+tensorflow==2.12.0
+keras==2.12.0
+h5py==3.8.0
