--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
-streamlit==1.35.0
-seaborn==0.12.2
-matplotlib==3.7.5
-opencv-python-headless==4.9.0.80
-numpy==1.24.4
-pandas==1.5.3
-pillow==10.3.0
-scikit-learn==1.3.0
-tensorflow==2.12.0
-keras==2.12.0
-h5py==3.8.0
+streamlit
+numpy
+pandas
+pillow
+matplotlib
+seaborn
+scikit-learn
+opencv-python-headless
+tensorflow==2.15.0
