--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,5 @@ scikit-learn==1.4.2
 opencv-python-headless==4.9.0.80
 matplotlib==3.9.0
 seaborn==0.13.2
-tensorflow==2.14.0
-python==3.10
+tensorflow==2.18.1
+rich<14,>=10.14.0
