--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,37 @@
+# Core
 streamlit==1.32.2
+
+# Numerical / Data
 numpy==1.26.4
 pandas==2.2.2
-pillow==10.3.0
 scikit-learn==1.4.2
+
+# Image processing
+pillow==10.3.0
 opencv-python-headless==4.9.0.80
+
+# Visualization
 matplotlib==3.9.0
 seaborn==0.13.2
+altair==5.5.0
+pydeck==0.9.1
+
+# TensorFlow (CPU-only if GPU not available)
 tensorflow==2.18.1
-rich<14,>=10.14.0
+keras==3.11.2
+h5py==3.14.0
+absl-py==2.3.1
+gast==0.6.0
+opt-einsum==3.4.0
+
+# Utilities
+requests==2.32.4
+rich==13.9.4
+markdown==3.8.2
+protobuf==4.25.8
+typing-extensions==4.14.1
+
+# Optional for dashboard / Streamlit enhancements
+toml==0.10.2
+tenacity==8.5.0
+watchdog==6.0.0
